fixed home page overflow, I think (row -15px margins?)

--- a/project/assets/css/main.less
+++ b/project/assets/css/main.less
@@ -382,6 +382,8 @@ a:hover {
             line-height: 35px;
         }
 
+
+
         .consultation-form-container {
             background-color: #FFF;
             border-radius: 4px;
@@ -699,4 +701,11 @@ a:hover {
 .needed {
     color: red;
     font-weight: bold;
+}
+
+.row {
+    @media (max-width: 768px) {
+        margin-right: 0;
+        margin-left: 0;
+    }
 }
